--- a/index.css
+++ b/index.css
@@ -1,11 +1,19 @@
 * { margin: 0; 
     padding: 0; } 
 
+    #barrauno{
+        color: green;
+    }
+
+    .textouno{
+        background-color: green;
+    }
+
     #header {
       background-color: #ffffff; 
       margin-right: 0px;
       margin-left:-50px;
-      margin-top: 50px;
+      margin-top: 65px;
     }
      
     #header-img {
