ajuste control carrusel y margenes

--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@
       color:hsl(128, 86%, 42%);
     }
 
-    #carouselExampleSlidesOnly{
+    #carouselExampleControls{
         margin-top: -16px;
         margin-right: 350px;
         margin-left: 350px;
