--- a/index.css
+++ b/index.css
@@ -10,19 +10,20 @@
       margin-right: 0px;
       margin-left:0px;
       margin-top: 0px;
-      height: 100px;
+      height: 130px;
     }
      
     #header-img {
         position: relative;
-        top: 0px;
+        top: 11px;
         bottom: 0px;
-        left:1200px;
+        left:1100px;
+        border-radius: 50%;
     }
     
     .general{
         position: relative;
-        top: 10px;
+        top: -60px;
         left: 0px;
         
     }    
@@ -31,7 +32,7 @@
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
         display: inline;
         margin:15px;
-        margin-top: 100px;
+        margin-top: 0px;
     }
 
     .inicio,  .nosotros, .proyectos, .blog, .contacto
