--- a/index.css
+++ b/index.css
@@ -67,3 +67,9 @@
         margin-left: auto;
     
     }
+
+    #galeria-img{
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+    }
