--- a/index.css
+++ b/index.css
@@ -1,6 +1,17 @@
 * { margin: 0; 
     padding: 0; } 
 
+    @media (max-width: 767px){
+
+        header-img{
+            display: block;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+    }
+        
+    
 
     #header {
       background-image: url('https://www.teahub.io/photos/full/269-2695264_fondo-madera-morado.jpg');
