--- a/index.css
+++ b/index.css
@@ -90,3 +90,42 @@
         margin-right: auto;
         margin-left: auto;
     }
+
+    @media (min-width:801px){
+        .container-fluid{
+            margin-top: -100px;
+            margin-left:450px;
+            margin-right: 200px;
+            font-weight: bold;
+            
+        }
+
+        .navbar{
+            background-image: url('Fondos/fondo-madera-blanco.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            
+        }
+
+        p{
+            color: rgba(20, 4, 80, 0.918);
+        }
+
+        #carouselExampleControls{
+            margin-top: 0px;
+            margin-right: 350px;
+            margin-left: 350px;
+        }
+
+        .d-block {
+            height: 500px;
+        }
+
+    }
+
+    @media (max-width:320px){
+        .container-fluid{
+            margin-top: -100px;
+            margin-left:190px;
+        }
+    }
