--- a/index.css
+++ b/index.css
@@ -91,24 +91,28 @@
         margin-left: auto;
     }
 
+    #logoredes{
+        border-radius: 50%;
+    }
+
     @media (min-width:801px){
         .container-fluid{
             margin-top: -100px;
             margin-left:450px;
             margin-right: 200px;
-            font-weight: bold;
+            font-weight:bold;
             
         }
 
         .navbar{
-            background-image: url('Fondos/fondo-madera-blanco.jpg');
+            background-image: url('Fondos/fondo-madera-morado.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             
         }
 
         p{
-            color: rgba(20, 4, 80, 0.918);
+            color: rgb(253, 253, 253);
         }
 
         #carouselExampleControls{
