--- a/portafolio.css
+++ b/portafolio.css
@@ -15,3 +15,8 @@
         margin-top: -100px;
         margin-left:210px;
     }
+
+    #logoredes{
+        border-radius: 50%;
+        margin-right: 5px;
+    }
