--- a/portafolio.css
+++ b/portafolio.css
@@ -20,3 +20,11 @@
         border-radius: 50%;
         margin-right: 5px;
     }
+
+    @media (max-width:320px){
+        .container-fluid{
+            margin-top: -100px;
+            margin-left:190px;
+            margin-bottom: -20px;
+        }
+    }
