--- a/portafolio.css
+++ b/portafolio.css
@@ -21,6 +21,10 @@
         margin-right: 5px;
     }
 
+    /*.card {
+        margin-top: 50px;
+    }*/
+
     @media (max-width:320px){
         .container-fluid{
             margin-top: -100px;
