--- a/portafolio.css
+++ b/portafolio.css
@@ -32,3 +32,31 @@
             margin-bottom: -20px;
         }
     }
+
+    @media (min-width:801px){
+        .container-fluid{
+            margin-top: -100px;
+            margin-left:450px;
+            margin-right: 200px;
+            font-weight:bold;
+        }
+
+        .navbar{
+            background-image: url('Fondos/9962-azul-liso.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            
+        }
+
+        .cabezote{
+            color:#ffffff;
+            font-weight:unset;   
+        }
+
+        p{
+            color: rgb(0, 0, 0);
+        }
+
+    }
