Se cambio color fuente a gold en nav y tamaño imagen

--- a/portafolio.css
+++ b/portafolio.css
@@ -53,6 +53,11 @@
             font-weight:unset;   
         }
 
+        .cabezoteUno{
+            color:#D4AF37;
+            font-weight:unset;   
+        }
+
         p{
             color: rgb(0, 0, 0);
         }
