--- a/portafolio.css
+++ b/portafolio.css
@@ -16,6 +16,15 @@
         margin-left:210px;
     }
 
+    .cabezote{
+        font-weight: unset;
+        color:#241178;
+    }
+
+    .cabezoteUno{
+        color:#D4AF37;
+    }
+
     #logoredes{
         border-radius: 50%;
         margin-right: 5px;
