--- a/galeria.css
+++ b/galeria.css
@@ -72,10 +72,9 @@
         }
 
         .card {
-        margin-top: 100px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
         }
 
         footer{
