--- a/nosotros.css
+++ b/nosotros.css
@@ -25,7 +25,7 @@
         color:#D4AF37;
     }
 
-    h3{
+    h3, h4{
         color:#D4AF37;
         font-weight: bold;
         margin-top: 5px;
